fixed the Heading and Alignment

--- a/_assets/css/index.scss
+++ b/_assets/css/index.scss
@@ -326,7 +326,7 @@ abbr{
   min-height: 17.25em;
   border-radius: 5px;
   padding: 0.75em 1.25rem;
-  margin-top: -4rem;
+  margin-top: -1.875rem;
   & ul {
     list-style: none;
     padding-left: 1em;
@@ -337,8 +337,8 @@ abbr{
   }
 
   @media screen and (min-width:771px) {
- 
-    margin-left: 1.25em;
+    //margin-left: 1.25em;
+    margin-top:-3rem;
     box-shadow: 0 0.5rem 1rem 0 #71767a61;
   }
 }
@@ -370,7 +370,7 @@ abbr{
 .ogp-shadow{
   box-shadow: 0 0.5rem 1rem 0 #71767a61;
   border-radius: 5px;
-  max-width: 17rem;
+  max-width: 19rem;
 }
 
 .card__image-workinggroup {
